tests/snapshots/tui__ascii_no_color_mode.snap
---
source: tests/tui.rs
expression: rendered
---
┌Sources───────────────────┐┌Variables (4)─────────────────────────────────────────────────────────┐
│> [x] env .env            ││> # DATABASE_URL       ********                 .env                  │
│  [x] env .env.local      ││  ! JWT_SECRET         sk_********              .env.local            │
│  [x] proc process        ││  + KEYBOARD_LAYOUT    us                       .env                  │
│                          ││  # PUBLIC_KEY         ********                 .env                  │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────────────────────────────────┐
│DATABASE_URL (secret-like)                                                                        │
│effective: ******** from .env                                                                     │
│                                                                                                  │
│occurrences:                                                                                      │
│.env:2 =********                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
profile=default filter=All sort=Key pane=Sources
