tests/snapshots/tui__details_secret_masked.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (4)─────────────────────────────────────────────────────────╮
│> [x] env .env            ││  🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x] env .env.local      ││> ⚠ JWT_SECRET         sk_••••••••              .env.local            │
│  [x] proc process        ││  ✓ KEYBOARD_LAYOUT    us                       .env                  │
│                          ││  🔒  PUBLIC_KEY         ••••••••                 .env                 │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│JWT_SECRET (secret-like)                                                                          │
│effective: sk_•••••••• from .env.local                                                            │
│                                                                                                  │
│occurrences:                                                                                      │
│.env:1 =sk_••••••••                                                                               │
│.env.local:1 =sk_••••••••                                                                         │
│                                                                                                  │
│diagnostics:                                                                                      │
│Warning ConflictingValues: JWT_SECRET differs across sources: .env:1 (sk_••••••••••34),           │
│.env.local:1 (sk_••••••••••99). Effective value is sk_••••••••••99 from .env.local.               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Variables
