tests/snapshots/tui__details_secret_revealed.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (4)─────────────────────────────────────────────────────────╮
│> [x]  env  4 .env        ││  🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x]  env  2 .env.local  ││> ⚠ JWT_SECRET         envlensFakeSecretSecond… .env.local            │
│  [x]  proc  0 process    ││  ✓ KEYBOARD_LAYOUT    us                       .env                  │
│                          ││  🔒  PUBLIC_KEY         ••••••••                 .env                 │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│JWT_SECRET (secret-like)                                                                          │
│effective: envlensFakeSecretSecond9999 from .env.local                                            │
│                                                                                                  │
│occurrences:                                                                                      │
│.env:1 =envlensFakeSecretFirst1234                                                                │
│.env.local:1 =envlensFakeSecretSecond9999                                                         │
│                                                                                                  │
│diagnostics:                                                                                      │
│Warning ConflictingValues: JWT_SECRET differs across sources: .env:1 (••••••••••34), .env.local…  │
│Info ShadowedValue: JWT_SECRET from .env:1 (••••••••••34) is shadowed by .env.local:1 (••••••••…  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Variables
