tests/snapshots/tui__details_unresolved_annotation.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (4)─────────────────────────────────────────────────────────╮
│  [x]  req  5 .env.examp… ││> ⚠ API_URL            ${HOST}:5001             .env                  │
│> [x]  env  4 .env        ││  🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x]  env  2 .env.local  ││  ✓ NODE_ENV           development              .env                  │
│  [x]  proc  0 process    ││  ⚠ PORT               5001                     .env.local            │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│API_URL                                                                                           │
│effective: ${HOST}:5001 from .env                                                                 │
│                                                                                                  │
│occurrences:                                                                                      │
│.env:4 =${HOST}:${PORT} (unresolved)                                                              │
│                                                                                                  │
│diagnostics:                                                                                      │
│Warning UndefinedReference: API_URL references undefined variable HOST                            │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Variables
