tests/snapshots/tui__empty_project.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (0)─────────────────────────────────────────────────────────╮
│> [x] proc process        ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│No variables match the current source/filter/search.                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Sources
