tests/snapshots/tui__filter_conflicts.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (1)─────────────────────────────────────────────────────────╮
│> [x]  req  5 .env.examp… ││> ⚠ PORT               5001                     .env.local            │
│  [x]  env  4 .env        ││                                                                      │
│  [x]  env  2 .env.local  ││                                                                      │
│  [x]  proc  0 process    ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│PORT (conflict)                                                                                   │
│effective: 5001 from .env.local                                                                   │
│                                                                                                  │
│occurrences:                                                                                      │
│.env.example:2 = (empty)                                                                          │
│... +2 more occurrences                                                                           │
│                                                                                                  │
│diagnostics:                                                                                      │
│Warning ConflictingValues: PORT differs across sources: .env:2 (3000), .env.local:1 (5001). Eff…  │
│Info ShadowedValue: PORT from .env:2 (3000) is shadowed by .env.local:1 (5001).                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=Conflicts sort=Key pane=Sources
