tests/snapshots/tui__filter_missing.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (2)─────────────────────────────────────────────────────────╮
│> [x] req .env.example    ││> ✗ JWT_SECRET         -                        -                     │
│  [x] env .env            ││  ✗ REDIS_URL          -                        -                     │
│  [x] env .env.local      ││                                                                      │
│  [x] proc process        ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│JWT_SECRET (missing)                                                                              │
│effective: <missing>                                                                              │
│                                                                                                  │
│occurrences:                                                                                      │
│.env.example:4 =•••••••• (empty)                                                                  │
│                                                                                                  │
│diagnostics:                                                                                      │
│Error MissingRequired: JWT_SECRET is required but is not defined in any enabled value-bearing     │
│source.                                                                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=Missing sort=Key pane=Sources
