tests/snapshots/tui__filter_secrets.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (3)─────────────────────────────────────────────────────────╮
│> [x]  env  4 .env        ││> 🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x]  env  2 .env.local  ││  ⚠ JWT_SECRET         ••••••••                 .env.local            │
│  [x]  proc  0 process    ││  🔒  PUBLIC_KEY         ••••••••                 .env                 │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│DATABASE_URL (secret-like)                                                                        │
│effective: •••••••• from .env                                                                     │
│                                                                                                  │
│occurrences:                                                                                      │
│.env:2 =••••••••                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=Secrets sort=Key pane=Sources
