tests/snapshots/tui__filter_warnings.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (1)─────────────────────────────────────────────────────────╮
│> [x] req .env.example    ││> ⚠ PORT               5001                     .env.local            │
│  [x] env .env            ││                                                                      │
│  [x] env .env.local      ││                                                                      │
│  [x] proc process        ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│PORT (conflict)                                                                                   │
│effective: 5001 from .env.local                                                                   │
│                                                                                                  │
│occurrences:                                                                                      │
│.env.example:2 = (empty)                                                                          │
│.env:2 =3000                                                                                      │
│.env.local:1 =5001                                                                                │
│                                                                                                  │
│diagnostics:                                                                                      │
│Warning ConflictingValues: PORT differs across sources: .env:2 (3000), .env.local:1 (5001).       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=Warnings sort=Key pane=Sources
