tests/snapshots/tui__help_overlay.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (5)─────────────────────────────────────────────────────────╮
│> [x] req .env.example    ││> 🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x] env .env            ││  ✗ JWT_SECRET         -                        -                     │
│  [x] env .env.local      ││  ✓ NODE_ENV           development              .env                  │
│  [x] proc process        ││  ⚠ PORT               5001                     .env.local            │
│                          ││  ✗ REDIS_URL          -                        -                     │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                    ╭Help────────────────────────────────────────────────────╮                    │
│                    │EnvLens keys                                            │                    │
│                    │Tab switch panes    j/k or arrows move                  │                    │
│                    │/ search           f filter                             │                    │
│                    │s sort             Space toggle source                  │                    │
│                    │r reveal key       R reveal all                         │                    │
│                    │Enter expand       e export report                      │                    │
╰────────────────────│o open source      Ctrl+r refresh                       │────────────────────╯
╭Details─────────────│Esc closes layers  q quit                               │────────────────────╮
│DATABASE_URL (secret│                                                        │                    │
│effective: •••••••• ╰────────────────────────────────────────────────────────╯                    │
│                                                                                                  │
│occurrences:                                                                                      │
│.env.example:3 =•••••••• (empty)                                                                  │
│.env:3 =••••••••                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Sources
