tests/snapshots/tui__initial_render_basic.snap
---
source: tests/tui.rs
expression: rendered
---
╭Sources───────────────────╮╭Variables (5)─────────────────────────────────────────────────────────╮
│> [x] req .env.example    ││> 🔒  DATABASE_URL       ••••••••                 .env                 │
│  [x] env .env            ││  ✗ JWT_SECRET         -                        -                     │
│  [x] env .env.local      ││  ✓ NODE_ENV           development              .env                  │
│  [x] proc process        ││  ⚠ PORT               5001                     .env.local            │
│                          ││  ✗ REDIS_URL          -                        -                     │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭Details───────────────────────────────────────────────────────────────────────────────────────────╮
│DATABASE_URL (secret-like)                                                                        │
│effective: •••••••• from .env                                                                     │
│                                                                                                  │
│occurrences:                                                                                      │
│.env.example:3 =•••••••• (empty)                                                                  │
│.env:3 =••••••••                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
profile=default filter=All sort=Key pane=Sources
